--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -1,71 +1,74 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-
-  .HomeContainer {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 80px;
-    padding: 20px;
-  }
-
-  
-  .ContainerTitulo{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    max-width: 700px;
-    padding: 20px;
-  }
-
-  .TituloDesc {
-    font-size: 3.6em;
-    font-weight: 5;
-    margin: 0;
-  }
-  
-  .HomeImage {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .HomeImage img {
-    width: 600px;
-    max-width: 100%; 
-    height: auto;
- 
-  }
-  
-  .ContainerComeçar{
-    display: flex;
-   justify-content: flex-start;
-  }
-
-  .BtnComeçar{
-    height: auto;
-    margin-top: 10%;
-    padding: 20px 55px;
-    font-size: 1.9em;
-    background-color: #010573;
-    border-radius: 50px;
-    border: none;
-    transition:  background-color 0.3s, box-shadow 0.3s,font-size 0.3s;
-    box-shadow: 6px 12px 16px rgba(0, 0, 0, 0.496);
-  }
-
-  .BtnComeçar:hover {
-    background-color: #0a0a8c;
-    box-shadow: 7px 13px 17px rgba(0, 0, 0, 0.496);
-    font-size: 2em;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  min-height: 100vh;
 }
 
+.HomeContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 80px;
+  padding: 20px;
+  min-height: 100vh;
+}
 
-.SobreContainer{
+.ContainerTitulo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  max-width: 700px;
+  padding: 20px;
+}
+
+.TituloDesc {
+  font-size: 3.6em;
+  font-weight: 5;
+  margin: 0;
+}
+
+.HomeImage {
+  display: flex;
+  justify-content: center;
+}
+
+.HomeImage img {
+  width: 600px;
+  max-width: 100%;
+  height: auto;
+}
+
+.ContainerComeçar {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.BtnComeçar {
+  height: auto;
+  margin-top: 10%;
+  padding: 20px 55px;
+  font-size: 1.9em;
+  background-color: #010573;
+  border-radius: 50px;
+  border: none;
+  transition: background-color 0.3s, box-shadow 0.3s, font-size 0.3s;
+  box-shadow: 6px 12px 16px rgba(0, 0, 0, 0.496);
+}
+
+.BtnComeçar:hover {
+  background-color: #0a0a8c;
+  box-shadow: 7px 13px 17px rgba(0, 0, 0, 0.496);
+  font-size: 2em;
+}
+
+.SobreContainer {
   margin-top: 5%;
   align-items: center;
   text-align: center;
 }
 
+.CarouselContainer {
+  width: 100%;
+  overflow: visible; 
+}
